# ai-chat-backend

./: alembic.ini  chat.db  pyproject.toml
alembic/: env.py
alembic/versions/: 276167989c3f_create_conversations_table.py  7a9c03f5f0b0_add_phone_column.py
app/: main.py
app/api/: auth.py  conversation.py
app/database/: connection.py  models.py
app/dependencies/: auth.py  repository.py
app/repositories/: conversation_repository.py  user_repository.py
app/schemas/: auth.py  conversation.py
app/services/: auth_service.py  conversation_service.py
app/utils/: jwt.py
